# unity-opencv-plugin

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_package.bat  build_windows.bat
Package/: README.md  package.json
Package/Documentation~/: USAGE.md
Package/Runtime/: GeometryUtils.cs  OpenCvPluginNative.cs  PnPNative.cs  PnPSolver.cs  com.github.uoa-eresearch.unity-opencv-plugin.asmdef
Package/Samples~/BasicUsage/: OpenCvPluginTests.cs
Package/Tests/: TestPnPSolver.cs  com.github.uoa-eresearch.unity-opencv-plugin.Tests.asmdef
source/: DanceVisPlugin.cpp  OpenCvPlugin.cpp  OpenCvPlugin.h
source/pnp/: PnPContext.cpp  PnPContext.h
unity/: GeometryUtils.cs  OpenCvPluginNative.cs  PnPNative.cs  PnPSolver.cs
